Se agregaron mejorar estéticas

--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 </head>
 <body>
 
-<header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="eventos.html">Eventos</a></li>
-            <li><a href="registro.html">Registro</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="img/logouam2.png" alt="Logo UAM">
+            </div>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="eventos.html">Eventos</a></li>
+                <li><a href="registro.html">Registro</a></li>
+            </ul>
+        </nav>
+    </header>
+    
 
 <section>
     <h1>Universidad Americana (UAM)</h1>
