Se aplicaron mejoras estéticas

--- a/eventos.html
+++ b/eventos.html
@@ -53,4 +53,8 @@
 </section>
 
 </body>
+<footer class="footer">
+    <p>&copy; 2025 Jorge Alí Rodríguez. Todos los derechos reservados.</p>
+
+</footer>  
 </html>
