--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
     <img src="img/estudiantes.jpg" alt="Estudiantes UAM">
 </section>
 
+
 </body>
+<footer class="footer">
+    <p>&copy; 2025 Jorge Alí Rodríguez. Todos los derechos reservados.</p>
+
+</footer>  
 </html>
 
 <script>
