--- a/registro.html
+++ b/registro.html
@@ -55,4 +55,9 @@
 <script src="js/validaciones.js"></script>
 
 </body>
+<footer class="footer">
+    <p>&copy; 2025 Jorge Alí Rodríguez. Todos los derechos reservados.</p>
+
+</footer>  
+
 </html>
